--- a/wp-ig-components/scss/components/cards/cardc/cardc.scss
+++ b/wp-ig-components/scss/components/cards/cardc/cardc.scss
@@ -95,3 +95,17 @@
   width: 100%;
   z-index: 1;
 }
+
+.cardc-expandable-content {
+  transition: var(--cardc-expandable-content-transition, 0.3s);
+  max-height: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.js--cardc-has-expand--is-open > .cardc-expandable-content {
+  max-height: var(--cardc-expandable-content-open-max-height, 1000px);
+  height: auto;
+  opacity: 1;
+  visibility: visible;
+}
