added spacing utilities

--- a/wp-ig-components/scss/utilities/utilities-bundle.scss
+++ b/wp-ig-components/scss/utilities/utilities-bundle.scss
@@ -1,5 +1,4 @@
-@import './individual/margin';
-@import './individual/padding';
+@import './individual/spacing';
 @import './individual/width';
 @import './individual/position';
 @import './individual/text';
