--- a/wp-ig-components/scss/utilities/utilities-bundle.scss
+++ b/wp-ig-components/scss/utilities/utilities-bundle.scss
@@ -1,5 +1,5 @@
 @import './individual/spacing';
-@import './individual/width';
+@import './individual/width-and-height';
 @import './individual/position';
 @import './individual/text';
 @import './individual/overflow';
