--- a/wp-ig-components/scss/components/buttons/btn-dropdown/btn-dropdown-active-reverse.scss
+++ b/wp-ig-components/scss/components/buttons/btn-dropdown/btn-dropdown-active-reverse.scss
@@ -22,7 +22,7 @@
       border-bottom: 12px solid var(--btn-dropdown-active-reverse-arrow-color, #fff);
       top: 0;
       left: 0;
-      transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 0.8);
+      transition: var(--btn-dropdown-active-reverse-transition, all 0.5s cubic-bezier(0.25, 1.7, 0.35, 0.8));
     }
 
     &:before {
