--- a/wp-ig-components/scss/components/dropdowns/menus/dropdowns-menu-slide-from-trigger-element.scss
+++ b/wp-ig-components/scss/components/dropdowns/menus/dropdowns-menu-slide-from-trigger-element.scss
@@ -8,6 +8,8 @@
     border-radius: 3px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     opacity: 0;
+    max-height: 0;
+    overflow: hidden;
   }
 
   &__menu-item {
@@ -59,6 +61,8 @@
   animation-fill-mode: forwards;
   animation-timing-function: linear, cubic-bezier(0.23, 1, 0.32, 1);
   animation-delay: 200ms, 0;
+  height: auto;
+  max-height: 1000px;
 }
 
 .fade_reverse {
