--- a/wp-ig-components/scss/basics/reset.scss
+++ b/wp-ig-components/scss/basics/reset.scss
@@ -3,13 +3,11 @@
 *::before,
 *::after {
   box-sizing: inherit;
- 
 }
 
 html {
-    box-sizing: border-box;
-    overflow-x: hidden;
-
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 /* Remove default padding */
@@ -17,8 +15,6 @@ ul,
 ol {
   padding: 0;
 }
-
-
 
 /* Remove default margin */
 body,
@@ -45,9 +41,6 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   position: relative;
-  
-
-
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
@@ -62,9 +55,9 @@ a:not([class]) {
 }
 
 a {
-    text-decoration: none;
-    // color: inherit;
-  }
+  text-decoration: none;
+  // color: inherit;
+}
 /* Make images easier to work with */
 img {
   max-width: 100%;
@@ -94,11 +87,22 @@ select {
   }
 }
 
-a, a:active, a:focus{
-  outline: none; /* Works in Firefox, Chrome, IE8 and above */ 
+a,
+a:active,
+a:focus {
+  outline: none; /* Works in Firefox, Chrome, IE8 and above */
 }
 
-a, a:hover {
+a,
+a:hover {
   color: inherit;
 }
 
+[class^="btn-dropdown"] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+}
