--- a/wp-ig-components/scss/components/buttons/btn-dropdown/btn-dropdown-swap-to-x.scss
+++ b/wp-ig-components/scss/components/buttons/btn-dropdown/btn-dropdown-swap-to-x.scss
@@ -2,6 +2,7 @@
   &__container {
     padding: 0.6em;
     cursor: pointer;
+    padding: var(--btn-dropdown-swap-to-x-padding, 0.6rem 0.7rem 0.8rem 1rem);
   }
 
   &__arrow {
@@ -66,5 +67,3 @@
     background-color: var(--btn-dropdown-swap-to-x-hover-circle-color, rgba(168, 168, 168, 0.2));
   }
 }
-
-
