--- a/wp-ig-components/scss/components/modals/simple-modal.scss
+++ b/wp-ig-components/scss/components/modals/simple-modal.scss
@@ -1,12 +1,11 @@
 .simple-modal__overlay {
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   visibility: hidden;
-  z-index: 3000;
+  z-index: 1000;
   opacity: 0;
   position: fixed;
   transition-duration: 300ms;
@@ -14,10 +13,10 @@
 .simple-modal__content {
   visibility: hidden;
   opacity: 0;
-  position: fixed;
-  left: 40%;
-  top: 30%;
-  z-index: 1;
+  @include center("both");
+  z-index: 2000;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
 .modal-active {
@@ -25,8 +24,12 @@
     visibility: visible;
     opacity: 1;
   }
-  & .simple-modal__content {
+  &.simple-modal__content {
     visibility: visible;
     opacity: 1;
   }
+}
+
+body.in-body-modal-active {
+  padding-right: 15px;
 }
