--- a/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__general.scss
+++ b/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__general.scss
@@ -6,6 +6,8 @@
 }
 
 .btn-hamburger__general {
+  background-color: transparent;
+  border: none;
 
     position: fixed;
     top: 5%;
@@ -16,12 +18,7 @@
     z-index: 100;
     transition: all 0.25s ease;
 
-    &--on-breakpoint {
-    @include hidden;
-        @media only screen and (max-width: $bp-lg) {
-          @include visible(1);
-        }
-    }
+  
   
     &:hover {
       opacity: 0.8;
