--- a/wp-ig-components/scss/components/dropdowns/menus/dropdowns-menu-animated.scss
+++ b/wp-ig-components/scss/components/dropdowns/menus/dropdowns-menu-animated.scss
@@ -13,6 +13,11 @@
   justify-content: center;
   align-items: center;
 
+  @media only screen and (max-width: $nav-main-breakpoint) {
+    width: 100%;
+    padding: 1rem 2rem 1rem 4rem;
+  }
+
   &:hover {
     & .dma__hiddent-content {
       position: absolute;
@@ -28,10 +33,7 @@
       display: block;
     }
 
-    @media only screen and (max-width: $nav-main-breakpoint) {
-      width: 100%;
-      padding: 1rem 2rem 1rem 4rem;
-    }
+
   }
 
   // &:last-child {
@@ -70,7 +72,7 @@
 }
 
 .dma__hiddent-content {
-  background-color: var(--dma-bg-color, black);
+  background-color: var(--dma-bg-color, transparent);
   padding-bottom: 0.2em;
   & li {
     display: none;
@@ -479,7 +481,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--dma-bg-color, black);
+    background-color: var(--dma-bg-color, transparent);
     padding: var(--dma-wrapper-padding, 0.7em 1em);
     position: fixed;
     width: 100%;
